# scribble

./: README.md
apple_script/: README.md
apple_script/src/hello_world/: Main.applescript
apple_script/src/practice/: Main.applescript
awk/: README.md
awk/src/hello_world/: main.awk
awk/src/practice/: main.awk  sample.csv
bash/: Dockerfile  README.md  docker-compose.yml
bash/src/envsubst/: hello.json  main.sh
bash/src/iconv/: main.sh  sample.txt
bash/src/overwrite/: README.md  cron.bash  cron_after.bash  run.bash
bash/src/read_command/: read_command.sh
bash/src/sampling/: sampling.sh
bash/src/scraping/: README.md
bash/src/strace/: main.sh
batchfile/: README.md
batchfile/src/hello_world/: main.bat
batchfile/src/practice/: main.bat
batchfile/src/wmic/: main.bat
build_system/: README.md
build_system/src/make/: README.md
build_system/src/ninja/: .gitignore  README.md
c/: .gitignore  Dockerfile  docker-compose.yml
c++/: .clang-format  .gitignore
c++/.docker/cmake/: Dockerfile  Dockerfile_centos7
c++/.docker/zapcc/: Dockerfile  docker-compose.yml
c++/src/cmake/: README.md
c++/src/cmake/ccache_or_pch/: CMakeLists.txt  README.md
c++/src/cmake/ccache_or_pch/src/: app.cpp  color.hpp  deka.hpp  main.cpp
c++/src/cmake/ccache_with_pch/: CMakeLists.txt  README.md
c++/src/cmake/ccache_with_pch/src/: app.hpp
c++/src/cmake/package/: CMakeLists.txt  LICENSE.txt  README.md
c++/src/cmake/package/src/: main.cpp
c++/src/cmake/preset/: CMakeLists.txt  CMakePresets.json  README.md
c++/src/cmake/preset/src/: main.cpp
c++/src/cmake/with_c/: CMakeLists.txt  README.md
c++/src/cmake/with_c/include/: piyo.h
c++/src/cmake/with_c/src/: piyo.cpp
c++/src/cmake/with_c/test/: main.c
c++/src/hello_world/: main.cpp
c++/src/logger/: logger.cxx
c++/src/practice/: main.cpp
c++/src/vs-2019/: .gitignore  README.md
c/.docker/linux/: Dockerfile
c/src/bsearch/: main.c
c/src/cgi/: .gitignore  README.md  httpd.conf
c/src/cmake/: CMakeLists.txt  main.c
c/src/hello_world/: main.c
c/src/iconv/: iconv.c
c/src/oniguruma/: README.md  main.c
c/src/rectangle_division/: main.c
c/src/sieve_of_eratosthenes/: main.c
c/src/split/: main.c
c/src/text_based_animation/: README.md  ansi.h  mei.c  mei.h
c/src/thread/: README.md  main.c
c/src/time/: main.c
c/src/underscore/: main.c
c_sharp/: README.md
c_sharp/HelloWorld/: HelloWorld.cs
cache/: Dockerfile  README.md  docker-compose.yml
cache/src/: Gemfile  main.rb
cache/src/scripting_with_lua/: Cargo.toml  README.md
cad/: .gitignore  README.md
cad/src/house/: house.FCStd  house.FCStd1
cmake/src/: CMakeLists.txt  main.cpp
cmake/src/hoge/: CMakeLists.txt
cmake/src/hoge/src/: hoge.cpp
commonlisp/: Dockerfile  README.md
commonlisp/src/practice/: main.lisp
docs/pwa/nuxt-example/: 200.html  index.html
embedded/m5stack/: Dockerfile  README.md
font_forge/: .gitignore  README.md
font_forge/src/convert_svg_to_ttf/: main.py
font_forge/src/hello_world/: main.pe
font_forge/src/practice/: main.pe
fortran/: .gitignore  Dockerfile  README.md
fortran/src/hello_world/: main.f90
fortran/src/include/: common.f90  main.f90
fortran/src/practice/: main.f90
glsl/src/blinking/: fragment_shader.glsl
glsl/src/cross/: fragment_shader.glsl
glsl/src/monochrome/: fragment_shader.glsl
glsl/src/move/: fragment_shader.glsl
go/: Dockerfile  README.md
go/src/database/: README.md  go.mod
go/src/file_io/: go.mod  main.go
go/src/hello_world/: main.go
go/src/http_request/: go.mod  main.go
go/src/practice/: go.mod  main.go
go/src/reflect/: go.mod  main.go
go/src/sam_ssr/: README.md  template.yaml
go/src/test_example/: README.md  go.mod  main.go  main_test.go
go/src/testify_example/: README.md  go.mod  main.go  main_test.go
grpc/: .gitignore  README.md
grpc/.docker/: Dockerfile  Dockerfile_cxx  Dockerfile_golang  Dockerfile_node  docker-compose.yml
grpc/src/: sample.proto
grpc/src/sample/cxx/: CMakeLists.txt  README.md  client.cxx  server.cxx
html/: README.md
html/360-degree-viewer/: .gitignore  README.md  index.html
html/web-design-tutorial/: README.md  index.html
hugo/: Dockerfile  README.md  docker-compose.yml
iac/: README.md
javascript/: Dockerfile  README.md  docker-compose.yml
jq/: README.md
julia/: Dockerfile  docker-compose.yml
kotlin/: .gitignore  README.md
kotlin/.docker/: pure.Dockerfile
kubernetes/: README.md
kubernetes/webrick_server/: Dockerfile_DB  docker-compose.yml
linkerscript/: README.md
lua/: README.md
markdown/makurakotoba/: README.md
markdown/sample/: README.md
monitoring/: README.md
msgpack/: CMakeLists.txt  Gemfile  README.md  main.cpp  serialize.rb
nasm/qemu/: README.md
nim/: Dockerfile  README.md  docker-compose.yml
nscripter2/: README.md  init.ps1
perl/: README.md
php/: Dockerfile  README.md  docker-compose.yml
powershell/: Dockerfile  README.md  docker-compose.yml
prolog/: Dockerfile  README.md
pwa/: Dockerfile  docker-compose.yml
python/: Dockerfile  README.md  docker-compose.yml
rpmbuild/: Dockerfile  README.md
rpmbuild/src/cmake_sample/src/: CMakeLists.txt  main.c
rpmbuild/src/cmake_sample/src/sample/: CMakeLists.txt
rpmbuild/src/cmake_sample/src/sample/include/: sample.h
rpmbuild/src/cmake_sample/src/sample/src/: sample.c
ruby/: Dockerfile  docker-compose.yml
rust/: .gitignore  Dockerfile  Dockerfile_centos7  README.md  docker-compose.yml
rust/src/win32/popup_window/: Cargo.toml  README.md
rust/src/win32/popup_window/src/: main.rs
rust/src/win32/print_bitmap/: Cargo.toml  README.md
rust/src/win32/print_bitmap/src/: main.rs
sed/: .gitignore  README.md
sql/: Dockerfile  README.md  docker-compose.yml
swift/sort/: main.swift
th_dnh_ph3/: .gitignore  README.md  init.bat  init.ps1
typescript/: README.md
unity/: .gitignore  README.md
vbscript/hello_world/: main.vbs
vbscript/practice/: main.vbs
vim/: README.md
wasm/: Dockerfile  README.md  docker-compose.yml
zig/: .gitignore  README.md
zsh/: Dockerfile  README.md
(+2001 files in other folders)
