[package]
name = "print_bitmap"
version = "0.1.0"
edition = "2021"

[features]
default = ['static_load', 'ddb', 'stretch_di_bits']
# load
dynamic_load = []
static_load = []
# memory
ddb = []
dib = []
# draw
bit_blt = []
stretch_blt = []
stretch_di_bits = []

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.measuring_performance]
version = "0.1.0"
path = "../../measuring_performance"
